# RAP-TransCLIP

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: syntax-check.yml
configs/: full_matrix.yaml  paper.yaml  standard.yaml
configs/concepts/: common_remote_sensing.yaml
configs/prompts/: rs106.txt
docs/: EXPERIMENT_PLAN.md  RUN_ALL_EXPERIMENTS.md
paper/: ICASSP2027_RAP_TransCLIP_Draft.md  ObjectContext_CLIP_Chinese_Draft.md  RAP_TransCLIP_Chinese_Draft.tex  SA_RAP_TransCLIP_Chinese_Draft.md  TextGraph_TransCLIP_Chinese_Draft.md
rap_transclip/: __init__.py  cli.py  concepts.py  config.py  data.py  feature_extraction.py  graph.py  metrics.py  models.py  multiview.py  object_context.py  prompts.py  protocols.py  reliability.py  runner.py  shift.py  solver.py  utils.py
scripts/: analyze_graph_edges.py  analyze_object_context.py  analyze_paper_results.py  build_concept_bank.py  build_index.py  check_paper_completion.py  download_checkpoints.py  extract_features.py  publish_to_github.sh  run_ablation_suite.py  run_all_experiments.sh  run_all_standard.py  run_experiment.py  run_gate_sensitivity.py  run_graph_ablation.py  run_graph_sweep.py  run_object_context_suite.py  run_paper_experiments.sh  run_paper_full.sh  run_paper_suite.py  run_protocol_suite.py  run_refinement_suite.py  run_resolution_suite.py  run_shift_component_ablation.py  run_textgraph_experiments.sh  summarize_refinement.py  summarize_results.py
tests/: test_smoke.py
