[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-context-rsclip"
version = "0.3.0"
description = "Training-free multi-scale object-context inference for remote-sensing vision-language models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ObjectContext-CLIP Contributors"}]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1",
  "PyYAML>=6.0",
  "Pillow>=10.0",
  "tqdm>=4.66",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "open-clip-torch>=2.26",
  "huggingface-hub>=0.23",
  "requests>=2.31",
]

[project.scripts]
object-context-clip = "rap_transclip.cli:main"

[tool.setuptools.packages.find]
include = ["rap_transclip*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
